в меню активная страница выделена всегда

--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
         <div class="main-nav-left">
           <a href="index.html">Главная</a>
           <a>О седоне</a>
-          <a>Гостиницы</a>
+          <a class="active">Гостиницы</a>
         </div>
 
         <div class="main-nav-right">
