--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </a>
 
         <div class="main-nav-left">
-          <a>Главная</a>
+          <a class="active">Главная</a>
           <a>О седоне</a>
           <a href="catalog.html">Гостиницы</a>
         </div>
