--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="icon" href="favicon.ico"> <!-- 32×32 -->
     <link rel="stylesheet" href="styles/styles.css">
   </head>
 
@@ -26,7 +27,7 @@
           </button>
           <button class="favorite" type="button">
             <span class="visually-hidden">Избранное</span>
-            <span class="notifications">12</span></button>
+            <span class="notifications">12</span>
           </button>
           <button class="book" type="button">Хочу сюда!</button>
         </div>
