--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="icon" href="favicon.ico"> <!-- 32×32 -->
     <link rel="stylesheet" href="styles/styles.css">
   </head>
 
@@ -58,7 +59,7 @@
           </div>
           <div>
             <h3>Красивая дорога</h3>
-            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            <p>Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>
           </div>
           <div>
             <h3>Мало туристов</h3>
