меня заставили убрать тройную вложенность зачем-то

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
       <section class="features">
         <h2 class="visually-hidden">Особенности Седоны</h2>
-        <div class="features-list alone">
+        <div class="features-list features-list-alone">
           <div>
             <h3>Настоящий городок</h3>
             <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
@@ -52,7 +52,7 @@
           <img src="images/features-1-truly-town.jpg" width="800" height="384" alt="Фото города Седона.">
         </div>
 
-        <div class="features-list multiple">
+        <div class="features-list features-list-multiple">
           <div>
             <h3>Небольшая площадь</h3>
             <p>Все достопримечательности находятся очень близко</p>
@@ -68,7 +68,7 @@
           </div>
         </div>
 
-        <div class="features-list alone reverse">
+        <div class="features-list features-list-alone features-list-reverse">
           <div>
             <h3>Там есть<br>мост дьявола</h3>
             <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
@@ -76,7 +76,7 @@
           <img src="images/features-2-devils-bridge.jpg" width="800" height="384" alt="Фото Моста Дьявола.">
         </div>
 
-        <div class="features-list multiple with-icons">
+        <div class="features-list features-list-multiple features-list-with-icons">
           <div class="housing">
             <h3>Жильё</h3>
             <p>Рекомендуем пожить <br>в настоящем мотеле, <br>всё как в кино!</p>
@@ -98,7 +98,7 @@
         <button type="button">Поиск гостиницы в Седоне</button>
       </section>
 
-      <form class="subscribe" action="https://echo.htmlacademy.ru/" method="post">
+      <form class="subscribe main-page-subscribe" action="https://echo.htmlacademy.ru/" method="post">
         <h2>Подпишитесь на рассылку</h2>
         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
         <div class="input-group">
@@ -110,7 +110,7 @@
 
     <footer class="main-footer">
       <div class="social">
-        <a class="vk" href="https://vk.com/htmlacademy">
+        <a class="social-link vk" href="https://vk.com/htmlacademy">
           <span class="visually-hidden">
             ВКонтакте
           </span>
@@ -120,7 +120,7 @@
           </svg>
         </a>
 
-        <a class="telegram" href="https://t.me/htmlacademy">
+        <a class="social-link telegram" href="https://t.me/htmlacademy">
           <span class="visually-hidden">
             Telegram
           </span>
@@ -130,7 +130,7 @@
           </svg>
         </a>
 
-        <a class="youtube" href="https://www.youtube.com/user/htmlacademyru">
+        <a class="social-link youtube" href="https://www.youtube.com/user/htmlacademyru">
           <span class="visually-hidden">
             YouTube
           </span>
@@ -186,7 +186,7 @@
                 <use href="#icon-minus" />
               </svg>
             </button>
-            <input type="number" name="count-adults" min="1" max="5" value="2" required>
+            <input class="input-count-people" type="number" name="count-adults" min="1" max="5" value="2" required>
             <button class="plus" type="button">
               <span class="visually-hidden">Увеличить число</span>
               <svg width="20px" height="20px" viewBox="0 0 20 20">
@@ -212,7 +212,7 @@
                 <use href="#icon-minus" />
               </svg>
             </button>
-            <input type="number" name="count-children" min="0" max="5" value="2">
+            <input class="input-count-people" type="number" name="count-children" min="0" max="5" value="2">
             <button class="plus" type="button">
               <span class="visually-hidden">Увеличить число</span>
               <svg width="20px" height="20px" viewBox="0 0 20 20">
