:heavy_check_mark: Сборка #master

--- a/master/catalog.html
+++ b/master/catalog.html
@@ -47,8 +47,8 @@
         <form class="set-filter-options" action="https://echo.htmlacademy.ru/" method="post">
           <div class="infrastructure">
             <h3>Инфраструктура:</h3>
-            <label class="label-checkbox"><input type="checkbox" name="pool">Бассейн</label>
-            <label class="label-checkbox"><input type="checkbox" name="parking">Парковка</label>
+            <label class="label-checkbox"><input type="checkbox" name="pool" checked>Бассейн</label>
+            <label class="label-checkbox"><input type="checkbox" name="parking" checked>Парковка</label>
             <label class="label-checkbox"><input type="checkbox" name="wi-fi">Wi-Fi</label>
           </div>
 
@@ -277,7 +277,7 @@
           </div>
         </div>
 
-        <button class="find-modal-window" type="submit">Найти</button>
+        <button class="find" type="submit">Найти</button>
       </form>
     </section>
   </body>
