--- a/master/index.html
+++ b/master/index.html
@@ -223,7 +223,7 @@
           </div>
         </div>
 
-        <button class="find-modal-window" type="submit">Найти</button>
+        <button class="find" type="submit">Найти</button>
       </form>
     </section>
   </body>
