--- a/catalog.html
+++ b/catalog.html
@@ -98,6 +98,7 @@
               <button class="view-cards active"> <span class="visually-hidden">Карточки</span> </button>
               <button class="fullscreen"> <span class="visually-hidden">Полный экран</span> </button>
               <button class="list"> <span class="visually-hidden">Список</span> </button>
+              <script src="scripts/view-format.js"></script>
             </div>
           </div>
 
@@ -282,6 +283,7 @@
 
         <button class="find" type="submit">Найти</button>
       </form>
+      <script src="scripts/modal-window.js"></script>
     </section>
   </body>
 
