--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
 
         <button class="find" type="submit">Найти</button>
       </form>
+      <script src="scripts/modal-window.js"></script>
     </section>
   </body>
 
