--- a/catalog.html
+++ b/catalog.html
@@ -160,7 +160,7 @@
           <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
           <div class="input-group">
             <label class="visually-hidden" for="subscribe-email">Введите ваш email:</label>
-            <input type="email" name="email" placeholder="Ваш e-mail" required>
+            <input id="subscribe-email" type="email" name="email" placeholder="Ваш e-mail" required>
             <button type="submit">Подписаться</button>
           </div>
         </form>
